--- a/static/bib/papers.bib
+++ b/static/bib/papers.bib
@@ -70,13 +70,6 @@
   arxiv={https://arxiv.org/abs/2510.04850}
 }
 
-@article{zhou2025semisupervised,
-  title={Semi-Supervised Conformal Prediction With Unlabeled Nonconformity Score},
-  author={Xuanning Zhou and Hao Zeng and Xiaobo Xia and Bingyi Jing and Hongxin Wei<sup>*</sup>},
-  year={Working},
-  arxiv={https://arxiv.org/abs/2505.21147}
-}
-
 @article{liu2025efficient,
   title={Efficient Membership Inference Attacks by Bayesian Neural Network},
   author={Zhenlong Liu and Wenyu Jiang and Feng Zhou and Hongxin Wei<sup>*</sup>},
@@ -96,6 +89,25 @@
   author={Qiang Hu and Hengxiang Zhang and Hongxin Wei<sup>*</sup>},
   year={Working},
   arxiv={https://arxiv.org/abs/2410.06814}
+}
+
+@inproceedings{guo2025earlyquality,
+  abbr={CVPR},
+  title={	Toward Early Quality Assessment of Text-to-Image Diffusion Models},
+  author={Huanlei Guo and Hongxin Wei<sup>*</sup> and Bingyi Jing<sup>*</sup>},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2026},
+  selected={true}
+}
+
+@inproceedings{zhou2025semisupervised,
+  abbr={CVPR},
+  title={Semi-Supervised Conformal Prediction With Unlabeled Nonconformity Score},
+  author={Xuanning Zhou and Hao Zeng and Xiaobo Xia and Bingyi Jing and Hongxin Wei<sup>*</sup>},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2026},
+  arxiv={https://arxiv.org/abs/2505.21147},
+  selected={true}
 }
 
 @inproceedings{hao2026multiconditional,
